# serializer version: 1
# name: test_groups[input0-light_payload0][light.dimmable_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmable_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dimmable light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 40>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:02-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input0-light_payload0][light.dimmable_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Dimmable light',
      'is_deconz_group': False,
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 40>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmable_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input0-light_payload0][light.group-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.group',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '01234E56789A-/groups/0',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input0-light_payload0][light.group-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_on': False,
      'brightness': 255,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 2500,
      'color_temp_kelvin': 400,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'Group',
      'hs_color': tuple(
        15.981,
        100.0,
      ),
      'is_deconz_group': True,
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        67,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.674,
        0.322,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.group',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input0-light_payload0][light.rgb_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'supported_color_modes': list([
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.rgb_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RGB light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input0-light_payload0][light.rgb_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 50,
      'color_mode': <ColorMode.XY: 'xy'>,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'RGB light',
      'hs_color': tuple(
        52.0,
        100.0,
      ),
      'is_deconz_group': False,
      'rgb_color': tuple(
        255,
        221,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.5,
        0.5,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.rgb_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input0-light_payload0][light.tunable_white_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6451,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 155,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.tunable_white_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tunable white light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:01-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input0-light_payload0][light.tunable_white_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 2500,
      'color_temp_kelvin': 400,
      'friendly_name': 'Tunable white light',
      'hs_color': tuple(
        15.981,
        100.0,
      ),
      'is_deconz_group': False,
      'max_color_temp_kelvin': 6451,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 155,
      'rgb_color': tuple(
        255,
        67,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.674,
        0.322,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.tunable_white_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input1-light_payload0][light.dimmable_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmable_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dimmable light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 40>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:02-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input1-light_payload0][light.dimmable_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Dimmable light',
      'is_deconz_group': False,
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 40>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmable_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input1-light_payload0][light.group-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.group',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '01234E56789A-/groups/0',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input1-light_payload0][light.group-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_on': False,
      'brightness': 50,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 2500,
      'color_temp_kelvin': 400,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'Group',
      'hs_color': tuple(
        15.981,
        100.0,
      ),
      'is_deconz_group': True,
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        67,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.674,
        0.322,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.group',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input1-light_payload0][light.rgb_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'supported_color_modes': list([
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.rgb_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RGB light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input1-light_payload0][light.rgb_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 50,
      'color_mode': <ColorMode.XY: 'xy'>,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'RGB light',
      'hs_color': tuple(
        52.0,
        100.0,
      ),
      'is_deconz_group': False,
      'rgb_color': tuple(
        255,
        221,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.5,
        0.5,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.rgb_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input1-light_payload0][light.tunable_white_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6451,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 155,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.tunable_white_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tunable white light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:01-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input1-light_payload0][light.tunable_white_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 2500,
      'color_temp_kelvin': 400,
      'friendly_name': 'Tunable white light',
      'hs_color': tuple(
        15.981,
        100.0,
      ),
      'is_deconz_group': False,
      'max_color_temp_kelvin': 6451,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 155,
      'rgb_color': tuple(
        255,
        67,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.674,
        0.322,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.tunable_white_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input2-light_payload0][light.dimmable_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.dimmable_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Dimmable light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 40>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:02-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input2-light_payload0][light.dimmable_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 255,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Dimmable light',
      'is_deconz_group': False,
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 40>,
    }),
    'context': <ANY>,
    'entity_id': 'light.dimmable_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input2-light_payload0][light.group-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.group',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': None,
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '01234E56789A-/groups/0',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input2-light_payload0][light.group-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'all_on': False,
      'brightness': 50,
      'color_mode': <ColorMode.XY: 'xy'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'Group',
      'hs_color': tuple(
        52.0,
        100.0,
      ),
      'is_deconz_group': True,
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        221,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.5,
        0.5,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.group',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input2-light_payload0][light.rgb_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'supported_color_modes': list([
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.rgb_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'RGB light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:00-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input2-light_payload0][light.rgb_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 50,
      'color_mode': <ColorMode.XY: 'xy'>,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'RGB light',
      'hs_color': tuple(
        52.0,
        100.0,
      ),
      'is_deconz_group': False,
      'rgb_color': tuple(
        255,
        221,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.5,
        0.5,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.rgb_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_groups[input2-light_payload0][light.tunable_white_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6451,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 155,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.tunable_white_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Tunable white light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:00:00:00:00:00:00:01-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_groups[input2-light_payload0][light.tunable_white_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': None,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 2500,
      'color_temp_kelvin': 400,
      'friendly_name': 'Tunable white light',
      'hs_color': tuple(
        15.981,
        100.0,
      ),
      'is_deconz_group': False,
      'max_color_temp_kelvin': 6451,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 155,
      'rgb_color': tuple(
        255,
        67,
        0,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
      'xy_color': tuple(
        0.674,
        0.322,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.tunable_white_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[light_payload0][light.hue_go-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hue_go',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hue Go',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '00:17:88:01:01:23:45:67-00',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[light_payload0][light.hue_go-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 254,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 375,
      'color_temp_kelvin': 2666,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'Hue Go',
      'hs_color': tuple(
        28.47,
        66.821,
      ),
      'is_deconz_group': False,
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        165,
        84,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.53,
        0.388,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.hue_go',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[light_payload1][light.hue_ensis-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'max_color_temp_kelvin': 7142,
      'max_mireds': 650,
      'min_color_temp_kelvin': 1538,
      'min_mireds': 140,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hue_ensis',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hue Ensis',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '00:17:88:01:01:23:45:67-01',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[light_payload1][light.hue_ensis-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 254,
      'color_mode': <ColorMode.XY: 'xy'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'Hue Ensis',
      'hs_color': tuple(
        29.691,
        38.039,
      ),
      'is_deconz_group': False,
      'max_color_temp_kelvin': 7142,
      'max_mireds': 650,
      'min_color_temp_kelvin': 1538,
      'min_mireds': 140,
      'rgb_color': tuple(
        255,
        206,
        158,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.427,
        0.373,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.hue_ensis',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[light_payload2][light.lidl_xmas_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'carnival',
        'collide',
        'fading',
        'fireworks',
        'flag',
        'glow',
        'rainbow',
        'snake',
        'snow',
        'sparkles',
        'steady',
        'strobe',
        'twinkle',
        'updown',
        'vintage',
        'waves',
      ]),
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.lidl_xmas_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'LIDL xmas light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '58:8e:81:ff:fe:db:7b:be-01',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[light_payload2][light.lidl_xmas_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 25,
      'color_mode': <ColorMode.HS: 'hs'>,
      'effect': None,
      'effect_list': list([
        'carnival',
        'collide',
        'fading',
        'fireworks',
        'flag',
        'glow',
        'rainbow',
        'snake',
        'snow',
        'sparkles',
        'steady',
        'strobe',
        'twinkle',
        'updown',
        'vintage',
        'waves',
      ]),
      'friendly_name': 'LIDL xmas light',
      'hs_color': tuple(
        294.938,
        55.294,
      ),
      'is_deconz_group': False,
      'rgb_color': tuple(
        243,
        113,
        255,
      ),
      'supported_color_modes': list([
        <ColorMode.HS: 'hs'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.357,
        0.188,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.lidl_xmas_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[light_payload3][light.hue_white_ambiance-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max_color_temp_kelvin': 6535,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hue_white_ambiance',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hue White Ambiance',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 40>,
    'translation_key': None,
    'unique_id': '00:17:88:01:01:23:45:67-02',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[light_payload3][light.hue_white_ambiance-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 254,
      'color_mode': <ColorMode.COLOR_TEMP: 'color_temp'>,
      'color_temp': 396,
      'color_temp_kelvin': 2525,
      'friendly_name': 'Hue White Ambiance',
      'hs_color': tuple(
        28.809,
        71.624,
      ),
      'is_deconz_group': False,
      'max_color_temp_kelvin': 6535,
      'max_mireds': 454,
      'min_color_temp_kelvin': 2202,
      'min_mireds': 153,
      'rgb_color': tuple(
        255,
        160,
        72,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
      ]),
      'supported_features': <LightEntityFeature: 40>,
      'xy_color': tuple(
        0.544,
        0.389,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.hue_white_ambiance',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[light_payload4][light.hue_filament-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.hue_filament',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Hue Filament',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 40>,
    'translation_key': None,
    'unique_id': '00:17:88:01:01:23:45:67-03',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[light_payload4][light.hue_filament-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 254,
      'color_mode': <ColorMode.BRIGHTNESS: 'brightness'>,
      'friendly_name': 'Hue Filament',
      'is_deconz_group': False,
      'supported_color_modes': list([
        <ColorMode.BRIGHTNESS: 'brightness'>,
      ]),
      'supported_features': <LightEntityFeature: 40>,
    }),
    'context': <ANY>,
    'entity_id': 'light.hue_filament',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[light_payload5][light.simple_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.simple_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Simple Light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': '00:15:8d:00:01:23:45:67-01',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[light_payload5][light.simple_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'color_mode': <ColorMode.ONOFF: 'onoff'>,
      'friendly_name': 'Simple Light',
      'is_deconz_group': False,
      'supported_color_modes': list([
        <ColorMode.ONOFF: 'onoff'>,
      ]),
      'supported_features': <LightEntityFeature: 0>,
    }),
    'context': <ANY>,
    'entity_id': 'light.simple_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_lights[light_payload6][light.gradient_light-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'effect_list': list([
        'colorloop',
      ]),
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
    }),
    'config_entry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'light',
    'entity_category': None,
    'entity_id': 'light.gradient_light',
    'has_entity_name': False,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Gradient light',
    'platform': 'deconz',
    'previous_unique_id': None,
    'supported_features': <LightEntityFeature: 44>,
    'translation_key': None,
    'unique_id': '00:17:88:01:0b:0c:0d:0e-0f',
    'unit_of_measurement': None,
  })
# ---
# name: test_lights[light_payload6][light.gradient_light-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'brightness': 184,
      'color_mode': <ColorMode.XY: 'xy'>,
      'color_temp': None,
      'color_temp_kelvin': None,
      'effect': None,
      'effect_list': list([
        'colorloop',
      ]),
      'friendly_name': 'Gradient light',
      'hs_color': tuple(
        98.095,
        74.118,
      ),
      'is_deconz_group': False,
      'max_color_temp_kelvin': 6535,
      'max_mireds': 500,
      'min_color_temp_kelvin': 2000,
      'min_mireds': 153,
      'rgb_color': tuple(
        135,
        255,
        66,
      ),
      'supported_color_modes': list([
        <ColorMode.COLOR_TEMP: 'color_temp'>,
        <ColorMode.HS: 'hs'>,
        <ColorMode.XY: 'xy'>,
      ]),
      'supported_features': <LightEntityFeature: 44>,
      'xy_color': tuple(
        0.2727,
        0.6226,
      ),
    }),
    'context': <ANY>,
    'entity_id': 'light.gradient_light',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
